--- a/styles/index.css
+++ b/styles/index.css
@@ -33,7 +33,8 @@
 
 .header__links-list-item:nth-child(2) .header__link,
 .header__links-list-item:nth-child(3) .header__link {
-  border-bottom: 1px solid black;
+  text-decoration: underline;
+  text-underline-offset: 0.2em;
 }
 
 .header__logo {
@@ -64,12 +65,15 @@
   background-size: cover;
   background-position: center;
   width: 100%;
+
 }
 
 .overlay {
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
+  
+  z-index: -1;
 }
 
 .cover__title {
@@ -129,4 +133,108 @@
   box-sizing: border-box;
   padding: 12px 32px 11px 31px;
   
+}
+
+.lots {
+  padding: 179px 24px 0;
+}
+
+.lots__heading {
+font-size: 40px;
+font-weight: 700;
+margin: 0 0 27px 40px;
+}
+
+.lots__card-list {
+list-style: none;
+text-wrap: wrap;
+display: flex;
+column-gap: 25px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 563px;
+  flex-grow: 1;
+  position: relative;
+}
+
+.card-link {
+  display: block;
+  text-decoration: none;
+  height: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  position: relative;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+}
+
+.card_type_film {
+  background-image: url('../images/card-lot-01.jpg');
+}
+
+.card_type_book {
+  background-image: url('../images/card-lot-02.jpg');
+}
+
+.card_type_picture {
+  background-image: url('../images/card-lot-03.jpg');
+}
+
+.card_type_film, 
+.card_type_book,
+.card_type_picture {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+}
+
+.card__title  {
+  padding: 51px 40px 0;
+  color: #FFF;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1.2;
+  text-decoration: underline;
+  text-underline-offset: 0.1em;
+
+  }
+
+.card__text {
+  font-size: 20px;
+  color: #FFF;
+  line-height: 1.2;
+  padding: 0 40px 48px;
+  font-weight: 500;
+  ;
+}
+
+.card__text,
+.card__title {
+  position: relative;
+  z-index: 1;
+}
+
+.lots__look-more-link {
+  font-size: 20px;
+  font-weight: 500;
+  margin: 30px 0 0 40px;
+  text-decoration: underline;
+  text-underline-offset: 0.1em;
 }
