--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,8 @@
 .header {
-  margin: 92px 24px 96px;
-  width: 1052px;
   display: flex;
   align-items: center;
+  width: 1052px;
+  margin: 92px 24px 96px;
 }
 
 .header__menu {
@@ -12,18 +12,18 @@
 }
 
 .header__links-list {
-  list-style: circle;
-  padding: 0;
-  margin: 0;
   display: flex;
   gap: 31.5px;
+  margin: 0;
+  padding: 0;
+  list-style: circle;
   
 }
 
 .header__link {
-  text-decoration: none;
   color: black;
   font-size: 18px;
+  text-decoration: none;
 }
 
 
@@ -40,50 +40,61 @@
 .header__logo {
   width: 148px;
   height: 105px;
-  padding: 0 9px;
   margin: 0 184px 0 36px;
+  padding: 0 9px;
 }
 
 .header__logo-image {
   display: block;
 }
 
-.header__address {
+.address {
   font-style: normal;
-  margin-right: 25px;
+  font-size: 18px;
+  line-height: 24.3px;
+  font-weight: 500;
+}
+
+.address:nth-child(1), .address:nth-child(2) {
+  text-decoration: underline;
+  text-underline-offset: 0.2em;
+}
+
+.header__address {
   width: 240px;
+  margin-right: 25px;
+  
 }
 
 .phone, .email {
-  text-decoration: none;
   border-bottom: 1px solid black;
+  text-decoration: none;
 }
 
 .cover {
+  width: 100%;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
-  width: 100%;
+  background-size: cover;
 
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
   width: 100%;
   height: 100%;
-  
-  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .cover__title {
+  padding: 165px 50px 0;
+  color: #FFF;
   font-weight: 700;
   font-size: 100px;
-  color: #FFF;
   line-height: 1.15;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  padding: 165px 50px 0;
 }
 
 .aligned-text {
@@ -107,31 +118,31 @@
 }
 
 .cover__description {
-  padding: 135px 50px 51px 78px;
   display: flex;
-  gap: 79px;
   justify-content: space-between;
   align-items: center;
+  gap: 79px;
+  padding: 135px 50px 51px 78px;
 }
 
 .cover__description-text {
-  font-size: 22px;
   color: #FFF;
+  font-size: 22px;
   line-height: 28px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
 }
 
 .bet-button {
-  width: 256px;
-  font-size: 22px;
-  font-weight: 500;
-  color: #FFF;
-  background-color: rgba(0, 0, 0, 0.1);
-  border: 1px solid #FFF;
-  text-transform: uppercase;
   box-sizing: border-box;
+  width: 256px;
+  border: 1px solid #FFF;
   padding: 12px 32px 11px 31px;
+  color: #FFF;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: rgba(0, 0, 0, 0.1);
   
 }
 
@@ -140,37 +151,37 @@
 }
 
 .lots__heading {
-font-size: 40px;
-font-weight: 700;
 margin: 0 0 27px 40px;
+font-weight: 700;
+font-size: 40px;
 }
 
 .lots__card-list {
-list-style: none;
-text-wrap: wrap;
 display: flex;
 column-gap: 25px;
+list-style: none;
+text-wrap: wrap;
 }
 
 .lots__card-list-item {
+  position: relative;
+  flex-grow: 1;
   width: 334px;
   min-height: 563px;
-  flex-grow: 1;
-  position: relative;
 }
 
 .card-link {
   display: block;
-  text-decoration: none;
   height: 100%;
+  text-decoration: none;
 }
 
 .card {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  position: relative;
 }
 
 .card::before {
@@ -178,10 +189,10 @@ column-gap: 25px;
   position: absolute;
   top: 0;
   left: 0;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: -1;
 }
 
 .card_type_film {
@@ -199,17 +210,17 @@ column-gap: 25px;
 .card_type_film, 
 .card_type_book,
 .card_type_picture {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   z-index: -1;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card__title  {
   padding: 51px 40px 0;
   color: #FFF;
-  font-size: 22px;
   font-weight: 700;
+  font-size: 22px;
   line-height: 1.2;
   text-decoration: underline;
   text-underline-offset: 0.1em;
@@ -217,11 +228,11 @@ column-gap: 25px;
   }
 
 .card__text {
-  font-size: 20px;
-  color: #FFF;
-  line-height: 1.2;
   padding: 0 40px 48px;
+  color: #FFF;
   font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   ;
 }
 
@@ -232,9 +243,99 @@ column-gap: 25px;
 }
 
 .lots__look-more-link {
-  font-size: 20px;
-  font-weight: 500;
   margin: 30px 0 0 40px;
+  font-weight: 500;
+  font-size: 20px;
   text-decoration: underline;
   text-underline-offset: 0.1em;
+}
+
+.about {
+display: grid;
+padding: 146px 24px 0;
+grid-template-columns: 1fr 4fr;
+column-gap: 72px;
+}
+
+.about__column {
+  grid-column: 2 / 3
+}
+
+.about__logo {
+  margin: 35px 0 0 47px;
+  grid-column: 1 / 2;
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  object-fit: cover;
+}
+
+.about__title {
+  font-size: 40px;
+  margin: 136px 0 100px;
+  font-weight: 700;
+}
+
+.about__text {
+font-size: 20px;
+line-height: 24px;
+font-weight: 500px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  gap: 185px;
+  justify-content: space-between;
+  width: 1000px;
+  margin: 0 50px;
+  padding: 180px 0 88px;
+}
+
+.footer__menu {
+
+}
+
+.footer__menu-list {
+  list-style: none;
+}
+
+.footer__menu-list-item {
+  font-size: 18px;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+  text-underline-offset: 0.2em;
+}
+
+.footer__menu-link_active { 
+text-decoration: none;
+}
+
+.footer__social-list {
+display: flex;
+gap: 48px;
+}
+
+.footer__social-list-item {
+
+}
+
+.footer__social-link {
+
+}
+
+.footer__social-icon {
+width: 48px;
+height: 48px;
 }
