--- a/styles/index.css
+++ b/styles/index.css
@@ -1,29 +1,37 @@
+@import url('../fonts/fonts.css');
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
 .header {
+  width: 100%;
   display: flex;
   align-items: center;
-  width: 1052px;
-  margin: 92px 24px 96px;
+  padding: 93px 24px 96px;
 }
 
 .header__menu {
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-content: space-between;
+  padding: 0 0 0 26.5px;
 }
 
 .header__links-list {
   display: flex;
-  gap: 31.5px;
-  margin: 0;
-  padding: 0;
-  list-style: circle;
-  
+  gap: 13px;
+  list-style: circle inside;
+  justify-content: center;
+  align-items: center; 
 }
 
 .header__link {
   color: black;
   font-size: 18px;
   text-decoration: none;
+  letter-spacing: 1%;
 }
 
 
@@ -38,10 +46,11 @@
 }
 
 .header__logo {
+  box-sizing: border-box;
   width: 148px;
   height: 105px;
-  margin: 0 184px 0 36px;
-  padding: 0 9px;
+  margin: 0 184px 0 34px;
+  padding: 0 5px;
 }
 
 .header__logo-image {
@@ -52,7 +61,8 @@
   font-style: normal;
   font-size: 18px;
   line-height: 24.3px;
-  font-weight: 500;
+  font-weight: normal;
+  letter-spacing: 1%;
 }
 
 .address:nth-child(1), .address:nth-child(2) {
@@ -61,48 +71,53 @@
 }
 
 .header__address {
-  width: 240px;
-  margin-right: 25px;
+  
+  
   
 }
 
-.phone, .email {
-  border-bottom: 1px solid black;
-  text-decoration: none;
-}
-
 .cover {
-  width: 100%;
+  position: relative;
+  padding: 165px 50px 50px 51px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
 
 }
 
 .overlay {
-  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 .cover__title {
-  padding: 165px 50px 0;
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
   color: #FFF;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 100px;
   line-height: 1.15;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
 .aligned-text {
   display: block;
+  
 }
 
 .aligned-text_center {
-  text-align: center;
+  text-align: center; 
 }
 
 .aligned-text_right {
@@ -111,35 +126,38 @@
 
 .letter-spacing-extended {
   letter-spacing: 0.6em;
+  
 }
 
 .no-letter-spacing {
-  letter-spacing: 0.3em;
+  letter-spacing: 0;
 }
 
 .cover__description {
+  position: relative;
+  z-index: 1;
   display: flex;
-  justify-content: space-between;
+  column-gap: 84px;
   align-items: center;
-  gap: 79px;
-  padding: 135px 50px 51px 78px;
+  padding: 125px 0 0 25px;
 }
 
 .cover__description-text {
   color: #FFF;
   font-size: 22px;
   line-height: 28px;
-  letter-spacing: 0.05em;
   text-transform: uppercase;
+  word-spacing: 18px;
+  
 }
 
 .bet-button {
-  box-sizing: border-box;
+  cursor: pointer;
   width: 256px;
   border: 1px solid #FFF;
-  padding: 12px 32px 11px 31px;
+  padding: 12px 5px;
   color: #FFF;
-  font-weight: 500;
+  font-weight: medium;
   font-size: 22px;
   text-transform: uppercase;
   background-color: rgba(0, 0, 0, 0.1);
@@ -151,9 +169,10 @@
 }
 
 .lots__heading {
-margin: 0 0 27px 40px;
-font-weight: 700;
+padding: 0 0 27px 40px;
+font-weight: bold;
 font-size: 40px;
+text-transform: uppercase;
 }
 
 .lots__card-list {
@@ -219,18 +238,19 @@ text-wrap: wrap;
 .card__title  {
   padding: 51px 40px 0;
   color: #FFF;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 22px;
   line-height: 1.2;
   text-decoration: underline;
   text-underline-offset: 0.1em;
+  text-transform: uppercase;
 
   }
 
 .card__text {
   padding: 0 40px 48px;
   color: #FFF;
-  font-weight: 500;
+  font-weight: normal;
   font-size: 20px;
   line-height: 1.2;
   ;
@@ -243,11 +263,11 @@ text-wrap: wrap;
 }
 
 .lots__look-more-link {
-  margin: 30px 0 0 40px;
-  font-weight: 500;
+  padding: 30px 0 0 40px;
+  font-weight: normal;
   font-size: 20px;
   text-decoration: underline;
-  text-underline-offset: 0.1em;
+  text-underline-offset: 0.2em;
 }
 
 .about {
@@ -282,31 +302,42 @@ column-gap: 72px;
 .about__title {
   font-size: 40px;
   margin: 136px 0 100px;
-  font-weight: 700;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .about__text {
-font-size: 20px;
-line-height: 24px;
-font-weight: 500px;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: normal;
+
+  
+}
+
+.about__text p:first-of-type {
+  margin: 0 0 24px;
 }
 
 .footer {
   display: flex;
   flex-direction: row;
-  gap: 185px;
+  column-gap: 185px;
   justify-content: space-between;
-  width: 1000px;
-  margin: 0 50px;
-  padding: 180px 0 88px;
+  padding: 180px 50px 88px;
+}
+
+.footer .address {
+  box-sizing: border-box;
+  padding-right: 30px;
 }
 
 .footer__menu {
-
+  padding: 0;
 }
 
 .footer__menu-list {
   list-style: none;
+  text-align:center;
 }
 
 .footer__menu-list-item {
@@ -319,12 +350,12 @@ font-weight: 500px;
 }
 
 .footer__menu-link_active { 
-text-decoration: none;
+  text-decoration: none;
 }
 
 .footer__social-list {
-display: flex;
-gap: 48px;
+  display: flex;
+  column-gap: 48px;
 }
 
 .footer__social-list-item {
