--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Raleway';
+  font-family: Raleway;
   src:
     url(./Raleway-Regular.woff2) format('woff2'),
     url(./Raleway-Regular.woff) format('woff');
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: 'Raleway';
+  font-family: Raleway;
   src:
     url(./Raleway-Bold.woff2) format('woff2'),
     url(./Raleway-Bold.woff) format('woff');
