--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,7 @@
   text-underline-offset: 0.2em;
 }
 
-.header__links-list-item:first-of-type a {
+.header__link_active {
   text-decoration: none;
 }
 
